# ball-and-stick-rl

./: .gitignore  MUJOCO_LOG.TXT  README.md  pyproject.toml  spherical_pendulum.xml  test_ppo.sh  test_sac.sh  train_ppo.sh  train_sac.sh  viewer.sh  viewer_v2.sh
ball_and_stick_rl/: compute_wheel_positions.py  ppo.py  rotate_euler_angles.py  sac.py  test_ppo.py  test_sac.py
mujoco_models/: robot.xml  wheel_base.xml
scripts/: get_wheel_positions.sh  rotate_euler_angles.sh
