[project]
name = "ball-and-stick-rl"
version = "0.1.0"
description = ""
authors = [
    { name = "David Brown", email = "david.brown@inria.fr" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.1,<1.2.0",
    "stable-baselines3[extra] (>=2.6.0,<3.0.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "wandb (>=0.20.1,<0.21.0)",
    "scipy (==1.14.1)",
    "torch (>=2.7.1,<3.0.0)",
    "torch-vision (>=0.1.6.dev0,<0.2.0)",
    "sb3-contrib (>=2.6.0,<3.0.0)",
    "mujoco @ file:///Users/david/code/mujoco/python/dist/mujoco-3.3.5.tar.gz",
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
